Lazy load iframes, fix video format, shift Instagram left on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -894,7 +894,7 @@ button {
     transform: scale(0.52);
     transform-origin: top left;
     position: relative;
-    left: -2rem;
+    left: -5rem;
   }
 }
 
